--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@gnosis.pm/solidity-data-structures": "^1.3.4",
+    "@lukso/lsp-smart-contracts": "^0.12.1",
     "@types/yargs": "^15.0.10",
     "argv": "^0.0.2",
     "axios": "^0.21.1",
